utilities/stringify_attr/src/tests/derive/container3.stderr
error: Unexpected literal
  --> $DIR/container3.rs:19:38
   |
19 |     #[stringify_attr(serde(rename(A, "A")))]
   |                                      ^^^
